[package]
name = "ndjsonloggercore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.19", optional = true}

[features]
default = ["std", "isotimestamp"]
std = []
isotimestamp = ["std", "dep:chrono"]
