[package]
name = "ndjsonloggercore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.19", optional = true}
ryu = "1.0.10"

[dev-dependencies]
serde = {version = "1.0.139", features = ["derive"]}
serde_json = "1.0.82"
random-fast-rng = "0.1.1"

[features]
default = []
std = []
isotimestamp = ["std", "dep:chrono"]
